AWS-rampup/SecurityGroups.tf
#6 Create a security group for jenkins to allow port 22,8080

resource "aws_security_group" "allow_jenkins" {
  name        = "allow_debug_traffic"
  description = "Allow intranet traffic"
  vpc_id      = aws_vpc.ramp-vpc.id

      ingress  {
      description      = "HTTP"
      from_port        = 8080
      to_port          = 8080
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }
  

    ingress   {
      description      = "SSH"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }
  

  egress  {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }

  tags = {
    Name = "allow_jenkins"
  }
}

#7. Create a security group for front end servers to allow 443,22
resource "aws_security_group" "allow_front" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.ramp-vpc.id

    ingress  {
      description      = "HTTP"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      sesecurity_groups = [aws_security_group.allow_lb.id]
    }

      ingress  {
      description      = "HTTPS"
      from_port        = 443
      to_port          = 443
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }
  

    ingress   {
      description      = "SSH"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      security_groups = [ aws_security_group.allow_jekins.id ]
    }  

  egress  {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }

  tags = {
    Name = "allow_front"
  }
}

#8. Create a security group for lb to allow 80

resource "aws_security_group" "allow_lb" {
  name        = "allow_lb_traffic"
  description = "Allow lb traffic"
  vpc_id      = aws_vpc.ramp-vpc.id

    ingress  {
      description      = "HTTP"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }

    egress  {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }

  tags = {
    Name = "allow_lb"
  }
}

#Create a security group for back end to allow trafic on application port
resource "aws_security_group" "allow_app" {
  name        = "allow_lb_traffic"
  description = "Allow lb traffic"
  vpc_id      = aws_vpc.ramp-vpc.id

    ingress  {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }

    egress  {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }

  tags = {
    Name = "allow_app"
  }
}
